--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class=”chat”>
-        <div class=”messages”></div>
-        <div id=”edge”></div>      
-        <form class=”actions”>
-            <input type=”text” placeholder="press 'Enter' to send">
-        </form>     
+    <div class="chat">
+        <div class="messages"></div>
+        <div id="edge"> </div>
+
+        <form class="actions" action="">
+            <input type="text" placeholder="Press 'Enter' to Send..." name="" id="">
+        </form>
     </div>
   <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js"></script>
-  <script src="script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
