--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatBot</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="chat">
+
+    <div class="container chat">
         <div class="messages"></div>
         <div id="edge"> </div>
 
         <form class="actions" action="">
-            <input type="text" placeholder="Press 'Enter' to Send..." name="" id="">
+            <input type="text" placeholder="'Enter' to send" name="" id="">
         </form>
     </div>
   <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js"></script>
